fix: fixing issues